fixed mobile safari bug. offscreen divs were rendering incorrectly. Fixed by removing css lines - position: relative

--- a/public/stylesheet2.css
+++ b/public/stylesheet2.css
@@ -504,10 +504,12 @@ h4, #categorytitle {
 }
 
 .displaycommentuser {
-    position: relative;
-    padding-top: 0px;
-    top: -10px;
-    padding-left: 100px;
+    /* position: relative; */
+    display: block;
+    text-align: right;
+    padding-top: 10px;
+    /* top: -10px; */
+    /* padding-left: 100px; */
 }
 
 .commenttop {
@@ -638,7 +640,7 @@ h4, #categorytitle {
 
 .itemauthor {
     display: block;
-    position: relative;
+    /* position: relative; */
     text-align: right;
     padding-right: 0px;
 }
